<resources>
    <string name="app_name">SaklarUniversalConfig</string>
    <!-- Strings used for fragments for navigation -->
    <string name="saklar_config_label">Konfigurasi Saklar</string>
    <string name="bluetooth_device_label">Bluetooth Device</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_connecting">CONNECTING</string>
    <string name="device_name">Device Name</string>
    <string name="device_address">Device Address</string>

    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>

    <string name="relay_name">Relay Name</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="relay">Relay 1</string>
    <string name="btn">btn 1</string>
    <string name="lamp">LAMP</string>
    <string name="on_off">ON/OFF</string>
    <string name="sirine">SIRINE</string>
    <string name="push_on_button">Push On Button</string>
    <string name="group_button">Group Button</string>
</resources>