<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mhandharbeni.saklaruniversalconfig.MainActivity">
    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/open"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/download"
        app:showAsAction="ifRoom" />

</menu>