<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:endIconMode="clear_text"
        android:id="@+id/edtRelayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/relay_name">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/edtRelayName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/rgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_button" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnPushOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_on_button" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_button" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>