<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:textAllCaps="true"
                android:id="@+id/txtDisplay"
                android:lines="1"
                android:maxLines="1"
                android:textSize="20sp"
                android:text="@string/relay"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/section1"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn1"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn5"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section2"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn2"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn6"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section3"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn3"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn7"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section4"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn4"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.textview.MaterialTextView
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:id="@+id/txtBtn8"
                    android:text="@string/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:weightSum="0.9"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">
            <LinearLayout
                android:padding="4dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="0.8"
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos1"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos2"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos3"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos4"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:padding="4dp"
                android:weightSum="0.6"
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lampMode"
                    android:textSize="20sp"
                    android:text="@string/lamp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onOff"
                    android:textSize="16sp"
                    android:text="@string/on_off"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sirineMode"
                    android:textSize="20sp"
                    android:text="@string/sirine"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="0.8"
                android:orientation="vertical"
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos5"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos6"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos7"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPos8"
                    android:textSize="20sp"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_bluetooth_black"
        android:contentDescription="scanDevices"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>